# comp8800_mesh_network

./: deliver_over_bl.py  enable_dfu.s  enable_dfu_no_net.s  flood_sram.s  surpress.s
general/: common.h  mesh.c  mesh.h
mal/: CMakeLists.txt  pm_static.yml  prj.conf  sysbuild.conf
mal/mcuboot_config/: mcuboot_config.h
mal/src/: main.c
mal/sysbuild/: mcuboot.conf
mngd/: CMakeLists.txt  prj.conf
mngd/src/: main.c
prxy/: CMakeLists.txt  pm_static.yml  prj.conf
prxy/src/: main.c  provisioner.c  provisioner.h  proxy_gatt.c  proxy_gatt.h
prxy/sysbuild/: mcuboot.conf
